Small rearrangements for the relax 3.3.0 CHANGE file text.

--- a/docs/CHANGES
+++ b/docs/CHANGES
@@ -77,7 +77,6 @@ http://svn.gna.org/svn/relax/tags/3.3.0
         * Implemented the pipe_control.mol_res_spin.format_info_full() function.  This follows from http://thread.gmane.org/gmane.science.nmr.relax.scm/22522/focus=6534.  This is a verbose representation of the spin information which can be used for presenting to the user.  Functions for shorter string versions will also be of great use, for example as described by Troels at http://thread.gmane.org/gmane.science.nmr.relax.scm/22522/focus=6535.
         * Created a unit test for the pipe_control.mol_res_spin.format_info_full() function.  This comprehensive test covers all input argument combinations.
         * Changed the behaviour of the pipe_control.structure.mass.pipe_centre_of_mass() function.  This function returns the CoM and optionally the mass of the structural data loaded into the current data pipe.  However it was matching the structural data to the molecule-residue-spin data structure and skipping spins that were deselected.  This illogical deselection part has been eliminated, as spins can be deselected for various analysis purposes and this should not change the CoM.  The deletion also significantly speeds up the function.
-        * Added a minfx minimum version check to the dep_check module.  This is to avoid problems such as that reported at bug #22408 (http://gna.org/bugs/?22408).
         * Added Andy Baldwin's 2013 R1rho relaxation dispersion model (BK13) to the manual.  The model has been added to the table of dispersion models and to the dispersion software comparison table of the dispersion chapter of the manual.  The citation has also been added to the bibliography.
         * The BK13 dispersion model is now properly added to the software comparison table.
         * Added the 'BK13' and 'BK13 full' dispersion models to the to do section of the manual.
@@ -255,7 +254,7 @@ http://svn.gna.org/svn/relax/tags/3.3.0
         * Improved data checking for all of the Structure system tests.  Before looping over the structural data, the number of lines in the real file and the newly generated file are compared.  This avoids the situation whereby an empty file is produced, accidentally allowing the test to pass.
         * Modified following functions (time points are now saved at the [ei][mi][oi][di] index level, at this index level all time points are saved for the R2eff point):  interpolate_disp(), to interpolate time points, all time points through the original dispersion points di, are collected and then made unique - this time list can potentially be the largest of all time lists;  interpolate_offset(), to interpolate time points, all time points through the original offset points, and then dispersion points di, are collected and then made unique - this time list can potentially be the largest of all time lists;  plot_disp_curves_to_file(), to acquire the original relax_times points;  return_r2eff_arrays(), to save all time points on the level of [ei][mi][oi][di].  At this index level, it will be a numpy array list with all time values used for fitting.  Bug #22461 (https://gna.org/bugs/?22461): NS R1rho 2-site_fit_r1 has extremely high chi2 value in system test Relax_disp.test_r1rho_kjaergaard_missing_r1.
         * Modified back_calc_r2eff() to accept interpolated time points.  Bug #22461 (https://gna.org/bugs/?22461): NS R1rho 2-site_fit_r1 has extremely high chi2 value in system test Relax_disp.test_r1rho_kjaergaard_missing_r1.
-        * Modified target function of relax disp, to use the the new list of time points, which are of higher dimension.  Bug #22461 (https://gna.org/bugs/?22461): NS R1rho 2-site_fit_r1 has extremely high chi2 value in system test Relax_disp.test_r1rho_kjaergaard_missing_r1.
+        * Modified target function of relax dispersion, to use the new list of time points, which are of higher dimension.  Bug #22461 (https://gna.org/bugs/?22461): NS R1rho 2-site_fit_r1 has extremely high chi2 value in system test Relax_disp.test_r1rho_kjaergaard_missing_r1.
         * Fix to system test Relax_disp.test_r1rho_kjaergaard_missing_r1().  After the relaxation times have been fixed, this model now return reasonable chi2 values.  The reported parameters are though quite different from all other models, and it seems something may still be wrong.  Bug #22461 (https://gna.org/bugs/?22461): NS R1rho 2-site_fit_r1 has extremely high chi2 value in system test Relax_disp.test_r1rho_kjaergaard_missing_r1.
         * Fix for system test Relax_disp.test_exp_fit(), where the spin.isotope was not set.  The new call to return_r2eff_arrays(), when producing graphs, raise RelaxSpinTypeError() if no isotope is set.  Bug #22461 (https://gna.org/bugs/?22461): NS R1rho 2-site_fit_r1 has extremely high chi2 value in system test Relax_disp.test_r1rho_kjaergaard_missing_r1.
         * Modified the Relax_disp.test_r1rho_kjaergaard_missing_r1 system test to pass on 64-bit Linux systems.  The accuracy of the checks of the optimised values have been decreased.
@@ -540,6 +539,7 @@ http://svn.gna.org/svn/relax/tags/3.3.0
         * Fix for time not extracted for CPMG experiments in target_function.  Bug #22461 (https://gna.org/bugs/?22461): NS R1rho 2-site_fit_r1 has extremely high chi2 value in system test Relax_disp.test_r1rho_kjaergaard_missing_r1.
         * Fix for interpolating time points, when producing xmgrace files for CPMG experiments.  Bug #22461 (https://gna.org/bugs/?22461): NS R1rho 2-site_fit_r1 has extremely high chi2 value in system test Relax_disp.test_r1rho_kjaergaard_missing_r1.
         * Correction for catastrophic implementation of Monte Carlo simulations for exponential curve-fitting R2eff values in the dispersion analysis.  A wrong implemented "else if" statement, would add the intensity for the simulated intensity together with the original intensity.  This means that all intensity values send to minimisation would be twice as high than usually (if spectra were not replicated).  This was discovered for Monte Carlo simulations of R2eff errors in exponential fit.  This will affect all analyses using full relaxation exponential curves until now.  By pure luck, it seems that the effect of this would be that R2eff errors are half the value they should be.  A further investigation shows, that for the selected data set, this had a minimum on influence on the fitted parameters, because the chi2 value would be scaled up by a factor 4.  Bug #22554 (https://gna.org/bugs/?22554): The distribution of intensity with errors in Monte Carlo simulations are markedly more narrow than expected.  Task #7822 (https://gna.org/task/?7822): Implement user function to estimate R2eff and associated errors for exponential curve fitting.
+        * Added a minfx minimum version check to the dep_check module.  This is to avoid problems such as that reported at bug #22408 (http://gna.org/bugs/?22408).
 
 
 
