Added the commit messages for the zooming_grid_search branch to the CHANGES file for relax 3.3.0.
These have already been processed.

--- a/docs/CHANGES
+++ b/docs/CHANGES
@@ -4,8 +4,9 @@ http://svn.gna.org/svn/relax/tags/3.3.0
 
     Features:
         * Huge speed ups for all of the relaxation dispersion models ranging from 1.366x to 164.180x times faster.  The speed ups for the clustered spin analysis are far greater than for the single spin analysis.
-        * Implementation of a zooming grid search algorithm for optimisation in all analyses.
-        * R1rho plotting.
+        * Implementation of a zooming grid search algorithm for optimisation in all analyses.  This includes the addition of the minimise.grid_zoom user function to set the zoom level.  The grid width will be divided by 2**zoom_level and centred at the current parameter values.  If the new grid is outside of the bounds of the original grid, the entire grid will be translated so that it lies entirely within the original.
+        * Increased the amount of user feedback for the minimise.grid_search user function.  Now a comment for each parameter is included in the printed grid search setup table.  This includes if the lower or upper bounds, or both, have been supplied by the user and if a preset value has been used instead.
+        * R1rho plotting!
         * Ability to optimise the R1 relaxation rate parameter in the off-resonance relaxation dispersion models.
         * Creation of the relax_disp.r1_fit user function for activating and deactivating R1 fitting in the dispersion analysis.
         * Better tab completion support in the prompt UI for Mac OS X users.  For some Python versions, the Mac supplied libedit library is used rather than GNU readline.  But this library uses a completely different language and hence tab completion was non-functional on these systems.  The library difference is now detected and the correct language sent into libedit to activate tab completion.
@@ -533,13 +534,87 @@ http://svn.gna.org/svn/relax/tags/3.3.0
         * API documentation fixes, where a "\" is the last character on the line.  There should be a space " ", ending this character.  Task #7807 (https://gna.org/task/?7807): Speed-up of dispersion models for clustered analysis.
         * Updated the minfx version number to 1.0.9 in the release checklist document.  This as of yet unreleased version contains an important fix for parallelised grid searches when the number of increments is set to one (i.e. a preset parameter).
         * Fix for the _prompt.test_align_tensor.Test_align_tensor.test_init_argfail_params unit test.  As the alignment tensor can now be initialised as None, the None value can be accepted and a different RelaxError is raised when the params argument is incorrectly supplied.
-
-
-        * Initialized merge tracking via "svnmerge" with revisions "1-24540" from  svn+ssh://bugman@svn.gna.org/svn/relax/branches/zooming_grid_search
-        * Removed merge tracking for "svnmerge" for  svn+ssh://bugman@svn.gna.org/svn/relax/branches/zooming_grid_search
-
-
-
+        * Added a new set of icons for use with the minimisation user functions.  These are of the Rosenbrock function and are much better suited for small icons than the current OpenDX 3D isosurface plots.  The matplotlib figure originates from public domain code at http://commons.wikimedia.org/wiki/File:Rosenbrock_function.svg.
+        * Redesign of the optimisation user functions calculate, grid_search, and minimise.  In preparation for expanding the number of optimisation user functions, these three current user functions have been shifted into the new minimise user function class.  The calculate user function is now accessed as minimise.calculate.  The grid search as minimise.grid_search.  And minimisation is via the minimise.execute user function.  The icon used for the new user function class is the Rosenbrock function or the banana optimisation problem.  As this is such a radical change, a huge number of changes in the relax source code, the sample scripts, the user manual, and the test suite were required.
+        * Created the new minimise.grid_zoom user function.  This allows the grid zoom level to be set.  The value is stored in the current data pipe and will be used later by the minimise.grid_search user function.
+        * The minimise.grid_zoom user function now uses the zoom-in Oxygen icon.
+        * Created the Relax_fit.test_zooming_grid_search system test.  This will be used to test the implementation of the zooming grid search.  The relaxation curve-fitting analysis should be one of the fastest for testing this.
+        * Added the print_model_title() method to the specific analysis base API class.  This will be used to format and print out the information returned by the model_info() API method.
+        * Implemented the print_model_title() specific analysis API method for the dispersion analysis.
+        * Modified the specific analysis API _model_loop_spin() common method.  This now additionally returns the spin ID string to allow the corresponding spin container to be identified.
+        * Implemented the specific analysis API common method _print_model_title_spin().  This is for the corresponding _model_loop_spin() method.  It can be aliased in the specific analyses to provide the print_model_title() API method.
+        * Aliased the _print_model_title_spin() specific analysis API common method in a few analyses.  This provides the print_model_title() API method for the J(w) mapping, consistency testing, and relaxation curve fitting analyses.
+        * Updated all the specific analysis methods affected by the _model_info_spin() API method change.  This is for the change whereby the common API method now returns the spin ID string as well.
+        * Implemented get_param_names() and get_param_values() for the relaxation curve-fitting analysis.  These are part of the specific analysis API.
+        * Created the specific analysis API return_parameter_object() function.  This is used by the non-specific analysis code to obtain the parameter object (a singleton object).  It will allow for more direct access to the parameter information.
+        * Created the parameter object infrastructure for adding the grid search lower and upper bounds.  The _add() method now accepts the grid_lower and grid_upper keyword arguments, which can be either values or functions.  These are then stored in the _grid_lower and _grid_upper class dictionaries. The public methods grid_lower() and grid_upper() have been added to return the value corresponding to the given parameter.
+        * Modified the specific analysis parameter object grid_lower() and grid_upper() methods.  These now accept the model information from the model_loop() API method and send that into an grid lower and upper functions.  These functions will require the information to pull out the correct spin, spin cluster, or other information from the current data pipe to determine what the bounds should be.
+        * Implemented infrastructure in the grid_search user function in preparation for the zooming grid.  The grid search backend now calls the new grid_bounds() function.  This takes the lower and upper bounds as arguments, uses the specific API to determine the per-model parameter grid search bounds, and then returns a per model list of lower and upper bounds.  The specific API get_param_names() and get_param_values() are called to obtain the current model parameter names and values, and then the parameter names and model info are used in the new parameter object grid_lower() and grid_upper() methods to obtain the bounds.  This shifts all of the grid search bounds logic out of the specific analyses and into the grid search backend, so it should allow the specific analysis code to be simplified.
+        * More modifications of the minimise.grid_search user function backend.  The grid_bounds() function has been renamed to grid_setup(), and it now accepts and processes the inc user function argument.  The error checking code of the relaxation curve-fitting grid_search_setup() optimisation function has been shifted into this analysis independent grid_setup() function to shift the minimise.grid_search user function error checking out of the specific analyses.  The function now scales the parameter bounds, using the yet-to-be implemented scaling() method of the parameter object.  And the grid search increments are converted into a per-model list of lists.
+        * Created the parameter object infrastructure for registering parameter scalings.  The _add() method now accepts the scaling keyword argument, which can be either a value or function. This is then stored in the _scaling dictionary.  The public method scaling() has been added to return the scaling factor corresponding to the given parameter.
+        * Modified the analysis specific API optimisation method.  The base calculate(), grid_search() and minimise() methods now all accept the scaling_matrix argument, and the minimise() scaling argument has been removed.  This scaling_matrix argument should be a per-model list of scaling matrices.  To handle the change, the pipe_control.minimise.assemble_scaling_matrix() function has been created. This uses the new parameter object scaling values to create the list of scaling matrices.  This will in the end replace all of the analysis specific assemble_scaling_matrix() functions and simplify their optimisation code paths.
+        * Changed the order of operations in the minimisation user function backends.  The specific analysis API overfit_deselect() method needs to be called before any grid bounds, increments, or the scaling matrices are assembled.  This is for the cases when the grid bounds or scaling factors are functions rather than values.
+        * Converted the relaxation curve-fitting analysis to the new grid bounds and scaling factor design.  The parameter object now registers the grid bounds and scaling factors for all of the curve-fitting parameters.  This includes three functions i_scaling(), i0() and iinf() in the specific_analyses.relax_fit.parameter_object module for calculating some of these values.  The specific_analyses.relax_fit.parameters.assemble_scaling_matrix() function has been deleted as this is now provided by the upstream code in pipe_control.minimise.  And the API methods grid_search() and minimise() has been modified to accept the list of scaling matrices.  As the grid bounds and increments are now handled by the upstream pipe_control.minimise.grid_setup() function, the specific_analyses.relax_fit.optimisation.grid_search_setup() function was redundant and was deleted.
+        * Created the consistency testing specific API method get_param_names().  This is now required for the minimise.calculate user function, specifically for the analysis independent assemble_scaling_matrix() function.  The get_param_names() method simply returns the fixed list of parameter names.
+        * Standardisation of the specific analysis API with respect to the model_loop() and base_data_loop().  The model information arguments for the data returned by model_loop(), and the data arguments for the data arguments for the data returned by base_data_loop() have been standardised throughout the API.
+        * Epydoc parameter order rearrangement in the specific analysis API base class.
+        * Updated the specific analysis API common methods for the recent model_info argument changes.
+        * Updated all of the specific API calculate() methods to accept the scaling_matrix argument.  The list of per-model scaling matrices is now created independently of the analysis type by the pipe_control.minimise methods for the minimise.calculate, minimise.grid_search and minimise.execute user functions and sent into the specific analysis backend.
+        * Updated all of the specific API grid_search() methods to accept the scaling_matrix argument.  The list of per-model scaling matrices is now created independently of the analysis type by the pipe_control.minimise methods for the minimise.calculate, minimise.grid_search and minimise.execute user functions and sent into the specific analysis backend.  The argument is also passed into the minimise() API method from the grid_search() method when that is used.
+        * Updated all of the specific API minimise() methods to accept the scaling_matrix argument.  The list of per-model scaling matrices is now created independently of the analysis type by the pipe_control.minimise methods for the minimise.calculate, minimise.grid_search and minimise.execute user functions and sent into the specific analysis backend.
+        * Fix for the Monte Carlo simulations for the model_info argument changes in the specific API.
+        * Fixes for the consistency testing and J(w) mapping calculate() methods.  This is for the changes to the data_init() specific analysis API method.
+        * More fixes for the Monte Carlo simulations for the model_info argument changes in the specific API.
+        * Updated all of the data_init() specific API calls where the spin ID is expected.
+        * Fixes for the _data_init_spin() specific API common method.  The data returned from _base_data_loop_spin() is just the spin ID, the spin container is not included.
+        * Updated the eliminate user function backend to work with the model_info argument changes in the specific API.
+        * The new pipe_control.minimise module functions can now handle models with no parameters.  The new assemble_scaling_matrix() and grid_setup() functions will now handle models with no parameters, as this is required for the relaxation dispersion analysis.
+        * More fixes for the eliminate user function backend.  This is for the model_info argument changes in the specific API.
+        * Fixes for the grid search backend for a recent breakage and expansion of its capabilities.  The user supplied lower and upper bounds for the grid search were no longer being scaled via the scaling matrix.  In addition, the code has been refactored to be simpler and more flexible.  The user can now supply just the lower or just the upper bounds and the grid search will work.
+        * The grid search setup function now prints out the grid search bounds to be used.  This is in the pipe_control.minimise.grid_setup() function, hence it is analysis independent.  This is useful feedback for the user to know what the grid search is doing.  And it will be even more useful for the zooming grid search to understand what is happening.
+        * The grid search setup printout now also included the number of increments for each parameter.
+        * Modified the new print_model_title() specific analysis API method.  This now accepts the prefix argument for creating different titles independently of the specific analysis.
+        * The grid search setup function now uses the prefix argument to the print_model_title() API function.  This is simply set to 'Grid search setup:'.
+        * The relaxation dispersion API now uses the MODEL_R2EFF variable for identifying the R2eff model.
+        * Changes to the minimise.grid_search user function frontend.  The Boolean constraints argument has been shifted to the end, and empty lines have been removed.
+        * Epydoc docstring fixes for the keyword arguments of the pipe_control.minimise module.
+        * Shifted the constraints Boolean argument to the end of the grid_search() function argument list.
+        * Major change to the grid search user function.  The minimise.grid_search user function now accepts the skip_preset flag.  When True, the grid search will skip any parameters with a preset value.  This allows the user to set parameters via the value.set user function and then have these parameters skipped in the grid search.  The new skip_preset argument is passed into the pipe_control.minimise.grid_setup() function in the backend.  This then sets both the grid lower and upper bounds to the preset parameter value and sets the number of increments to 1 for that parameter so that it is essentially skipped in the grid search.
+        * Small change to the table printed out during the minimise.grid_search setup.
+        * Fix for the skipping of preset parameters in the grid search.  Dictionary and list type parameters are now handled correctly.
+        * Converted the relaxation dispersion analysis to the new grid bounds and scaling factor design.  The parameter object now registers the grid bounds and scaling factors for all of the dispersion parameters.  This includes the functions dw_lower(), dwH_lower(), pA_lower() and i0_upper() in the specific_analyses.relax_disp.parameter_object module for calculating some of these values.  The specific_analyses.relax_disp.parameters.assemble_scaling_matrix() function has been deleted as this is now provided by the upstream code in pipe_control.minimise.  And the API methods grid_search() and minimise() has been modified to accept the list of scaling matrices.  As the grid bounds and increments are now handled by the upstream pipe_control.minimise.grid_setup() function, the specific_analyses.relax_disp.optimisation.grid_search_setup() function was redundant and was deleted.  The specific_analyses.relax_disp.parameters.get_param_names() function was also modified with the full argument added, to allow either the base parameter names or an augmented form with the dictionary key for presenting to the user to be returned.  Importantly to allow the changes to be operational, the model_loop() API method was redesigned so that, for the R2eff base model, the individual spins rather than spin clusters will be looped over. This allows the specific_analyses.relax_disp.optimisation.minimise_r2eff() function to continue to operate correctly.
+        * Implemented the J(w) mapping analysis get_param_names() API method.  This simply returns the hardcoded list of 3 parameters of the model, and allows the minimise.calculate user function to operate.
+        * Updated the _print_model_title_spin() specific API common method.  This now accepts the prefix argument and adds this to the title.
+        * The minimise.grid_search user function can now properly handle preset values of NaN.  This occurs when the parameter vector contains values of None due to the parameter not being set and then the Python list being converted to a numpy array.  The value of NaN is now caught and the parameter is no longer identified as being preset.
+        * Fixes for the relaxation curve-fitting grid search.  The parameters which are not set are no longer defaulting to 0.0.  This means that the parameter vector will sometimes contain NaN values, but this is important for the correct operation of the new minimise.grid_search user function backend.
+        * Updated the NOE analysis to handle the changes for the minimise.calculate user function.  This now requires the model_loop() and get_param_names() API methods to be implemented.  The first is provided by the API common _model_loop_spin() method and the second simply returns a list of the single 'noe' parameter.
+        * Created the _print_model_title_global() specific analysis API method.  This is to be paired with the _model_loop_single_global() API method and it simply prints out the prefix as the title.
+        * Created the specific analysis parameter object _add_align_tensor() method.  When called by a specific analysis, this will add the [Axx, Ayy, Axy, Axz, Ayz] parameters to the corresponding parameter object.
+        * Deleted the lib.optimisation module.  The checks in the single test_grid_ops() function are implemented in the pipe_control.minimise.grid_setup() function and are now redundant.
+        * Removed the import of the now deleted lib.optimisation module from the model-free analysis.
+        * Converted the N-state model analysis to the new grid bounds and scaling factor design.  The parameter object now registers the grid bounds and scaling factors for all of the N-state model parameters.  The specific_analyses.n_state_model.parameters.assemble_scaling_matrix() function has been deleted as this is now provided by the upstream code in pipe_control.minimise.  And the API methods grid_search() and minimise() has been modified to accept the list of scaling matrices.  In addition, all of the lower bounds defined in the grid_search() API method have been deleted as this is now in the parameter object.  The new API function print_model_title() has been aliased from _print_model_title_global().  And the get_param_names() and get_param_values() API methods have been implemented.
+        * The grid search upper and lower bound functions now must accept the incs argument.  For a few analyses, the number of grid search increments are used to remove the end point of the grid, to remove duplicate points due to the circular nature of angles.  Therefore the parameter object grid_lower() and grid_upper() methods now send the grid increment number for each parameter into all grid bound determining functions.  The relaxation dispersion and curve-fitting analyses have been updated for the change.
+        * Converted the frame order analysis to the new grid bounds and scaling factor design.  The parameter object now registers the grid bounds and scaling factors for all of the dispersion parameters.  This includes the functions angle_upper_excluding_bound(), axis_alpha_upper(), cone_angle_lower(), cone_angle_upper(), pivot_grid_bound(), pivot_x_lower(), pivot_x_upper(), pivot_y_lower(), pivot_y_upper(), pivot_z_lower(), and pivot_z_upper() in the specific_analyses.frame_order.parameter_object module for calculating some of these values.  The specific_analyses.frame_order.parameters.assemble_scaling_matrix() function has been deleted as this is now provided by the upstream code in pipe_control.minimise.  And the API methods grid_search() and minimise() has been modified to accept the list of scaling matrices.  As the grid bounds and increments are now handled by the upstream pipe_control.minimise.grid_setup() function, the setup and error checking code in the grid_search() API method was redundant and was deleted.
+        * Modified all calls to the parameter object _add() base class method.  These are now all spread across multiple lines, with each argument on a separate line.  This is for easier maintenance of the specific analysis parameters, as the code is now much cleaner and argument changes will only have diffs for that argument.  It is also visually easier to see all the settings for each parameter.
+        * Fix for the grid search setup printout when parameters are preset.
+        * Changes to the diffusion tensor initialisation in the model-free auto-analysis.  The values of the tensor are now initialised to None.  This is to allow for the new grid search preset flag which defaults to True, setting the values to None indicates that a grid search should be performed.
+        * The diffusion_tensor.init user function can now set initial tensor parameter values of None.  This is to allow for the new grid search preset flag.  Therefore allowing the values to be None allows for a grid search to be performed by default.
+        * Created two new model-free system tests.  These are Mf.test_m0_grid_with_grid_search and Mf.test_m0_grid_vs_m1_with_grid_search.  Their aim is to better test the grid search in a model-free analysis when parameters are preset.
+        * Converted the model-free analysis to the new grid bounds and scaling factor design.  The parameter object now registers the grid bounds and scaling factors for all of the model-free parameters.  This includes the functions rex_scaling() and rex_upper() in the specific_analyses.model_free.parameter_object module for calculating some of these values.  The base parameter object has also been updated as that is where the diffusion parameters are defined.  Here the da_lower() and da_upper() have been defined to handle the different Da value constraints.  The specific_analyses.model_free.parameters.assemble_scaling_matrix() function has been deleted as this is now provided by the upstream code in pipe_control.minimise.  And the API methods grid_search() and minimise() has been modified to accept the list of scaling matrices.  As the grid bounds and increments are now handled by the upstream pipe_control.minimise.grid_setup() function, the grid_search_config(), grid_search_diff_bounds() and grid_search_spin_bounds() functions in the specific_analyses.model_free.optimisation module were redundant and were deleted.  The new API function print_model_title() has been implemented to handle the grid search setup printouts.
+        * Modified the pipe_control.minimise.grid_setup() function for when no parameters are present.  For the current version of minfx to function correctly (1.0.8), the lower, upper and inc values should be set to [] rather than None.
+        * Fix for the lib.arg_check.is_num_or_num_tuple().  When the can_be_none flag is set to True, the tuple of None values is now considered valid.  This enable the diffusion_tensor.init user function to accept the spheroid tensor values of (None, None, None, None), and the ellipsoid tensor values as a tuple of 6 None.
+        * Fix for the _prompt.test_diffusion_tensor.Test_diffusion_tensor.test_init_argfail_params unit test. As the diffusion tensor can now be initialised as None, the None value can be accepted and a different RelaxError is raised when the params argument is incorrectly supplied.
+        * Modified the behaviour of the parameter object units() method.  If the unit is set to the default of None, this method will now return an empty string instead of None.
+        * The rx parameter of the relaxation curve-fitting analysis now has 'rad.s^-1' units defined.
+        * Implemented the zooming grid search.  If the zoom level is set to any value other than 0, then the grid width will be divided by 2**zoom_level and centred at the current parameter values.  If the new grid is outside of the bounds of the original grid, the entire grid will be translated so that it lies entirely within the original.
+        * Modified the zooming grid search algorithm.  If the zoom level is negative, hence the grid will be larger than the original, the checks that the grid is within the original are no longer active.
+        * Changed the minimise.grid_zoom user function.  The zoom level can now be any floating point number or integer, including negative values.  The user function docstring has been significantly expanded to explain the entire zooming grid search concept.
+        * Alphabetical ordering of the minimisation user functions in the user_functions.minimisation module.
+        * Large expansion of the minimise.grid_search user function documentation.  The previous documentation was essentially non-existent.
+        * Expanded the minimise.grid_zoom user function documentation.  A few sentences about the limitations of the algorithm have been added.
+        * Completed the Relax_fit.test_zooming_grid_search system test.  Now only a single spin is optimised.  The zooming levels increase in integer increments from 0 to 50 so that the final zoomed grid is insanely small (as the curve-fitting C modules are incredibly fast, this test is nevertheless relatively quick).  The final zooming grid search parameter values are checked to see if they are the same as those optimised in the Relax_fit.test_curve_fitting_height system test to demonstrate the success of the algorithm.
+        * Modified the grid search upper bounds functions for the relaxation curve-fitting.  This is for both the exponential relaxation curve-fitting analysis and the same fitting in the dispersion analysis.  The intensity values are doubled and then rounded to the next order.  This ensures that I0 and Iinf will be within the grid bounds.  Hence the zooming grid search can be used for these curves.
+        * Expanded the documentation for the minimise.calculate user function.  This now explains the dual operations of the user function.
         * Fixes for some relaxation dispersion system tests not converted to the new optimisation user functions.  Minimisation is now via the minimise.execute user function, which used to be the minimise user function.
         * Added a 128x128 pixel version of the zoom-in Oxygen icon.  This icon size is not available in the repository located at svn://anonsvn.kde.org/home/kde/trunk/kdesupport/oxygen-icons.  Therefore the scalable/actions/small/48x48/zoom-in.svgz file was copied and then exported into a 128x128 PNG, and finally converted to a Gzipped EPS file for the relax manual.
         * The frame order grid search bound functions can now handle increment values of None or 1.  These cases are now caught and the full lower or upper bound is now returned.
